tests/fixtures/invalid/set_bitxor_none.py
# Cannot bitwise XOR Set[int] and None
x: set[int] = {1, 2, 3} ^ None
